--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<title>Karbono aztarna</title>
+		<meta http-equiv="refresh" content="5">
+	<title>Karbono aztarrrna</title>
+
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css" />
 	<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.js"></script>
@@ -16,7 +18,7 @@
 	<div class="ui-grid-a">
 		<div class="ui-block-a">
 			<div class="ui-field-contain">
-			    <label for="erabiltzailea">Erabiltzaileaasdf:</label>
+			    <label for="erabiltzailea">Erabiltzaileaaa:</label>
 			    <input type="text" name="erabiltzailea" id="erabiltzailea" placeholder="Erabiltzailea" value="">
 			</div>
 			<div class="ui-field-contain">
