--- a/www/index.html
+++ b/www/index.html
@@ -38,8 +38,15 @@
 </div><!-- /page login-->
 
 <!-- Egindako azterketak agertzen diren orria hemendik azterketa aukeratuta datuak sartuko dira: #azterketak -->
-<div data-role="page" id="azterketak" data-title="Azterketak">
+<div data-role="page" id="azterketaOrria" data-title="Azterketak">
 	Erabiltzaile horrek burututako azterketa desberdinak
+	<ul data-role="listview" id="azterketaZerrenda">
+    <li><a href="#">Acura</a></li>
+    <li><a href="#">Audi</a></li>
+    <li><a href="#">BMW</a></li>
+    <li><a href="#">Cadillac</a></li>
+    <li><a href="#">Ferrari</a></li>
+</ul>
 </div><!-- /page -->
 
 <!-- Formularioak, datuak sartzeko formularioak daude hemen: #alkanzeak -->
