gode botoia sartu

--- a/www/index.html
+++ b/www/index.html
@@ -114,7 +114,9 @@
 				</div>
 			</form>
 		</div>
-		<div data-role="footer"></div>
+		<div data-role="footer">
+			<button class="ui-btn ui-btn-inline">Gorde</button>
+		</div>
 	</div>
 	<!-- /page -->
 
