--- a/www/index.html
+++ b/www/index.html
@@ -7,11 +7,9 @@
 <!--	<meta http-equiv="refresh" content="5">-->
 <title>Karbono aztarrrna</title>
 
-<link rel="stylesheet"
-	href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css" />
+<link rel="stylesheet" href="./jquery.mobile/jquery.mobile-1.4.5.css" />
 <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-<script
-	src="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.js"></script>
+<script src="./jquery.mobile/jquery.mobile-1.4.5.js"></script>
 </head>
 
 <body>
@@ -65,17 +63,17 @@
 			<h1>Sartu datuak</h1>
 		</div>
 		<div role="main" class="ui-content">
-		<div class="ui-field-contain">
-         <label for="text-12">Text input:</label>
-         <input type="text" name="text-12" id="text-12" value="">
-    </div>
+			<div class="ui-field-contain">
+				<label for="text-12">Text input:</label> <input type="text"
+					name="text-12" id="text-12" value="">
+			</div>
 			<form id="kontsumoDatuak">
 				<div data-role="collapsible">
 					<h4>Alcance 1</h4>
 					<div class="ui-field-contain">
-         <label for="text-12">Text input:</label>
-         <input type="text" name="text-12" id="text-12" value="">
-    </div>
+						<label for="text-12">Text input:</label> <input type="text"
+							name="text-12" id="text-12" value="">
+					</div>
 					<div class="ui-field-contain">
 						<label for="argia">Argi kontsumoa:</label> <input type="text"
 							name="argia" id="argia" value="" />
@@ -115,7 +113,7 @@
 			</form>
 		</div>
 		<div data-role="footer">
-			<button class="ui-btn ui-btn-inline">Gorde</button>
+			<button class="ui-btn ui-icon-check ui-btn-icon-left">Gorde</button>
 		</div>
 	</div>
 	<!-- /page -->
