azterketatik eraikinetara pasa

--- a/www/index.html
+++ b/www/index.html
@@ -43,10 +43,9 @@
 	<!-- /page login-->
 
 	<!-- Egindako azterketak agertzen diren orria hemendik azterketa aukeratuta datuak sartuko dira: #azterketak -->
-	<div data-role="page" id="azterketaOrria" data-title="Azterketak">
+	<div data-role="page" id="eraikinOrria" data-title="Eraikin aztertuak">
 		<div role="main" class="ui-content">
-			Erabiltzaile horrek burututako azterketa desberdinak
-			<ul data-role="listview" id="azterketaZerrenda">
+			<ul data-role="listview" id="eraikinZerrenda">
 				<li><a href="#">Acura</a></li>
 				<li><a href="#">Audi</a></li>
 				<li><a href="#">BMW</a></li>
