eraikin zerrenda txikitu eta linkekin probak

--- a/www/index.html
+++ b/www/index.html
@@ -46,18 +46,15 @@
 	<div data-role="page" id="eraikinOrria" data-title="Eraikin aztertuak">
 		<div role="main" class="ui-content">
 			<ul data-role="listview" id="eraikinZerrenda">
-				<li><a href="#">Acura</a></li>
-				<li><a href="#">Audi</a></li>
-				<li><a href="#">BMW</a></li>
-				<li><a href="#">Cadillac</a></li>
-				<li><a href="#">Ferrari</a></li>
+				<li><a href="?id=1#alkantzeak">Acura</a></li>
+				<li><a href="?id=2#alkantzeak">Audi</a></li>
 			</ul>
 		</div>
 	</div>
 	<!-- /page -->
 
 	<!-- Formularioak, datuak sartzeko formularioak daude hemen: #alkanzeak -->
-	<div data-role="page" id="alkanzeak" data-title="Alkanzeak">
+	<div data-role="page" id="alkantzeak" data-title="Alkantzeak">
 		<div data-role="header">
 			<h1>Sartu datuak</h1>
 		</div>
