eraikinetatik alkantzeetara eraikin id pasa

--- a/www/index.html
+++ b/www/index.html
@@ -47,11 +47,8 @@
 		<div role="main" class="ui-content">
 			Erabiltzaile horrek burututako azterketa desberdinak
 			<ul data-role="listview" id="azterketaZerrenda">
-				<li><a href="#">Acura</a></li>
-				<li><a href="#">Audi</a></li>
-				<li><a href="#">BMW</a></li>
-				<li><a href="#">Cadillac</a></li>
-				<li><a href="#">Ferrari</a></li>
+				<li><a class="edif" data-id="1" href="#alkanzeak">Acura</a></li>
+				<li><a class="edif" data-id="12" href="#alkanzeak">Audi</a></li>
 			</ul>
 		</div>
 	</div>
@@ -112,7 +109,7 @@
 				</div>
 			</form>
 		</div>
-		<div data-role="footer">
+		<div data-role="footer" data-position="fixed">
 			<button class="ui-btn ui-icon-check ui-btn-icon-left">Gorde</button>
 		</div>
 	</div>
