--- a/www/index.html
+++ b/www/index.html
@@ -20,13 +20,13 @@
 				<div class="ui-block-a">
 					<form id="loginForm">
 						<div class="ui-field-contain">
-							<label for="erabiltzailea">Erabiltzailea:</label> <input
-								type="text" name="erabiltzailea" id="erabiltzailea"
+							<label for="email">Erabiltzailea:</label> <input
+								type="text" name="email" id="email"
 								placeholder="Erabiltzailea" value="">
 						</div>
 						<div class="ui-field-contain">
-							<label for="pasahitza">Pasahitza:</label> <input type="text"
-								name="pasahitza" id="pasahitza" placeholder="Pasahitza" value="">
+							<label for="password">Pasahitza:</label> <input type="text"
+								name="password" id="password" placeholder="Pasahitza" value="">
 						</div>
 						<div class="ui-field-contain">
 							<button type="submit" id="sartu"
