--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,13 @@
 <title>Karbono aztarrrna</title>
 
 <link rel="stylesheet" href="./jquery.mobile/jquery.mobile-1.4.5.css" />
+<script src="./jquery.mobile/jquery.js"></script>
+<!-- 
 <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+<script
+			  src="https://code.jquery.com/jquery-3.3.1.min.js"
+			  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+			  crossorigin="anonymous"></script> -->
 <script src="./jquery.mobile/jquery.mobile-1.4.5.js"></script>
 </head>
 
