erabiltzaile eta pasahitzen value beteta probetarako

--- a/www/index.html
+++ b/www/index.html
@@ -28,11 +28,11 @@
 						<div class="ui-field-contain">
 							<label for="email">Erabiltzailea:</label> <input
 								type="text" name="email" id="email"
-								placeholder="Erabiltzailea" value="">
+								placeholder="Erabiltzailea" value="sortizdearri@zubirimanteo.com">
 						</div>
 						<div class="ui-field-contain">
 							<label for="password">Pasahitza:</label> <input type="text"
-								name="password" id="password" placeholder="Pasahitza" value="">
+								name="password" id="password" placeholder="Pasahitza" value="sortizdearri">
 						</div>
 						<div class="ui-field-contain">
 							<button type="submit" id="sartu"
