--- a/www/index.html
+++ b/www/index.html
@@ -47,14 +47,15 @@
 		</div>
 	</div>
 	<!-- /page login-->
-
+	<input type="hidden" id="token"/>
 	<!-- Egindako azterketak agertzen diren orria hemendik azterketa aukeratuta datuak sartuko dira: #azterketak -->
 	<div data-role="page" id="eraikinOrria" data-title="Eraikin aztertuak">
 		<div role="main" class="ui-content">
 			Erabiltzaile horrek burututako azterketa desberdinak
-			<ul data-role="listview" id="azterketaZerrenda">
-				<li><a class="edif" data-id="1" href="#alkanzeak">Acura</a></li>
+			<ul data-role="listview" id="eraikinZerrenda">
+				<!-- adibidea literalki idatzia
 				<li><a class="edif" data-id="12" href="#alkanzeak">Audi</a></li>
+				-->
 			</ul>
 		</div>
 	</div>
