estudioZerrenda orria gehitu

--- a/www/index.html
+++ b/www/index.html
@@ -61,6 +61,20 @@
 	</div>
 	<!-- /page -->
 
+	<!-- egin diren estudioen zerrenda, momentuz bakarrik bukatutakoena-->
+	<div data-role="page" id="estudioOria" data-title="Egindako neurketak">
+		<div role="main" class="ui-content">
+			Eraikin honen neurketa hauek egin dira
+			<ul data-role="listview" id="estudioZerrenda">
+				<!-- adibidea literalki idatzia
+				<li><a class="estudio" data-id="12" href="#alkantzeak">adibideaestudio</a></li>
+				-->
+
+			</ul>
+		</div>
+	</div>
+	<!-- /page -->
+
 	<!-- Formularioak, datuak sartzeko formularioak daude hemen: #alkanzeak -->
 	<div data-role="page" id="alkantzeak" data-title="Alkantzeak">
 		<div data-role="header">
