logout orria eta botoiak gehitu

--- a/www/index.html
+++ b/www/index.html
@@ -54,6 +54,7 @@
 <div data-role="page" id="eraikinOrria" data-title="Eraikin aztertuak">
     <div data-role="header">
         <h1>Erabiltzaile horrek burututako azterketa desberdinak</h1>
+        <button class="ui-btn ui-btn-b ui-btn-right ui-icon-power ui-btn-icon-notext ui-corner-all irten"></button>
     </div>
     <div role="main" class="ui-content">
 
@@ -70,6 +71,7 @@
 <div data-role="page" id="estudioOria" data-title="Egindako neurketak">
     <div data-role="header">
         <h1>Eraikin honen neurketa hauek egin dira</h1>
+        <button class="ui-btn ui-btn-b ui-btn-right ui-icon-power ui-btn-icon-notext ui-corner-all irten"></button>
     </div>
     <div role="main" class="ui-content">
         <ul data-role="listview" id="estudioZerrenda">
@@ -86,6 +88,7 @@
 <div data-role="page" id="alkantzeak" data-title="Alkantzeak">
     <div data-role="header">
         <h1>Datos de alcances</h1>
+        <button class="ui-btn ui-btn-b ui-btn-right ui-icon-power ui-btn-icon-notext ui-corner-all irten"></button>
     </div>
     <div role="main" class="ui-content">
         <div class="ui-field-contain">
@@ -165,6 +168,17 @@
     </header>
     <article data-role="content">
         <p>Usuario o contraseña no valida</p>
+        <a href="#" data-role="button" data-rel="back">Aceptar</a>
+    </article>
+</section>
+<!-- Errore mezuaren dialogo bukaera -->
+
+<!-- logouta egin eta gero erabiltaileari erakusteko  -->
+<section id="pageLogout" data-role="dialog">
+    <header data-role="header">
+        <h1>Logout realizado</h1>
+    </header>
+    <article data-role="content">
         <a href="#" data-role="button" data-rel="back">Aceptar</a>
     </article>
 </section>
