probak egiten phonegap mobilekin funtzionatzen du eta konpilatuta ez

--- a/www/index.html
+++ b/www/index.html
@@ -28,12 +28,12 @@
                     <div class="ui-field-contain">
                         <label for="email">Erabiltzailea:</label> <input
                             type="text" name="email" id="email"
-                            placeholder="Erabiltzailea" value="sortizdearri@zubirimanteo.com">
+                            placeholder="Erabiltzailea" value="">
                     </div>
                     <div class="ui-field-contain">
                         <label for="password">Pasahitza:</label> <input type="text"
                                                                         name="password" id="password"
-                                                                        placeholder="Pasahitza" value="sortizdearri">
+                                                                        placeholder="Pasahitza" value="">
                     </div>
                     <div class="ui-field-contain">
                         <button type="submit" id="sartu"
