--- a/www/index.html
+++ b/www/index.html
@@ -71,7 +71,8 @@
 <div data-role="page" id="estudioOria" data-title="Egindako neurketak">
     <div data-role="header">
         <h1>Eraikin honen neurketa hauek egin dira</h1>
-        <button class="ui-btn ui-btn-b ui-btn-right ui-icon-power ui-btn-icon-notext ui-corner-all irten"></button>
+        <a href="#eraikinOrria" class="ui-btn ui-btn-b ui-btn-right ui-icon-home ui-btn-icon-notext ui-corner-all"></a>
+        <!--<button class="ui-btn ui-btn-b ui-btn-right ui-icon-power ui-btn-icon-notext ui-corner-all irten"></button>-->
     </div>
     <div role="main" class="ui-content">
         <ul data-role="listview" id="estudioZerrenda">
@@ -88,7 +89,8 @@
 <div data-role="page" id="alkantzeak" data-title="Alkantzeak">
     <div data-role="header">
         <h1>Datos de alcances</h1>
-        <button class="ui-btn ui-btn-b ui-btn-right ui-icon-power ui-btn-icon-notext ui-corner-all irten"></button>
+        <a href="#eraikinOrria" class="ui-btn ui-btn-b ui-btn-right ui-icon-home ui-btn-icon-notext ui-corner-all"></a>
+        <!--<button class="ui-btn ui-btn-b ui-btn-right ui-icon-power ui-btn-icon-notext ui-corner-all irten"></button>-->
     </div>
     <div role="main" class="ui-content">
         <div class="ui-field-contain">
