interfazean mezu batzuk aldatu

--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
 <!-- Egindako azterketak agertzen diren orria hemendik azterketa aukeratuta datuak sartuko dira: #azterketak -->
 <div data-role="page" id="eraikinOrria" data-title="Eraikin aztertuak">
     <div data-role="header">
-        <h1>Erabiltzaile horrek burututako azterketa desberdinak</h1>
+        <h1>Aztertutako eraikinak</h1>
         <button class="ui-btn ui-btn-b ui-btn-right ui-icon-power ui-btn-icon-notext ui-corner-all irten"></button>
     </div>
     <div role="main" class="ui-content">
@@ -70,7 +70,7 @@
 <!-- egin diren estudioen zerrenda, momentuz bakarrik bukatutakoena-->
 <div data-role="page" id="estudioOria" data-title="Egindako neurketak">
     <div data-role="header">
-        <h1>Eraikin honen neurketa hauek egin dira</h1>
+        <h1>Burututako neurketak</h1>
         <a href="#eraikinOrria" class="ui-btn ui-btn-b ui-btn-right ui-icon-home ui-btn-icon-notext ui-corner-all"></a>
         <!--<button class="ui-btn ui-btn-b ui-btn-right ui-icon-power ui-btn-icon-notext ui-corner-all irten"></button>-->
     </div>
@@ -88,7 +88,7 @@
 <!-- Formularioak, datuak sartzeko formularioak daude hemen: #alkanzeak -->
 <div data-role="page" id="alkantzeak" data-title="Alkantzeak">
     <div data-role="header">
-        <h1>Datos de alcances</h1>
+        <h1>Kontsumo datuak</h1>
         <a href="#eraikinOrria" class="ui-btn ui-btn-b ui-btn-right ui-icon-home ui-btn-icon-notext ui-corner-all"></a>
         <!--<button class="ui-btn ui-btn-b ui-btn-right ui-icon-power ui-btn-icon-notext ui-corner-all irten"></button>-->
     </div>
