interfazean easokoek proposatutako aldaketak

--- a/www/index.html
+++ b/www/index.html
@@ -102,24 +102,19 @@
             <div data-role="collapsible">
                 <h4>Alcance 1</h4>
                 <div class="ui-field-contain">
-                    <label for="gas-natural1">Gas natural:</label> <input type="text" disabled
+                    <label for="gas-natural1">Gas natural (KWh):</label> <input type="text" disabled
                                                                           name="gas-natural1" id="gas-natural1"
                                                                           value="">
                 </div>
+
                 <div class="ui-field-contain">
-                    <label for="gas-natural2">Gas natural:</label> <input type="text" disabled
-                                                                          name="gas-natural2" id="gas-natural2"
-                                                                          value=""/>
-                    <!-- placeholder="Text input" -->
-                </div>
-                <div class="ui-field-contain">
-                    <label for="refrigerantes">Refrigerantes:</label> <input type="text" disabled
+                    <label for="refrigerantes">Refrigerantes (Kg):</label> <input type="text" disabled
                                                                           name="refrigerantes" id="refrigerantes"
                                                                           value=""/>
 
                 </div>
                 <div class="ui-field-contain">
-                    <label for="recarga-gas-refrigerantes">Recarga gases refrigerantes:</label> <input type="text" disabled
+                    <label for="recarga-gas-refrigerantes">Recarga gases refrigerantes (Kg):</label> <input type="text" disabled
                                                                              name="recarga-gas-refrigerantes" id="recarga-gas-refrigerantes"
                                                                              value=""/>
 
@@ -128,7 +123,7 @@
             <div data-role="collapsible">
                 <h4>Alcance 2</h4>
                 <div class="ui-field-contain">
-                    <label for="electricidad">Electricidad:</label> <input type="text" disabled
+                    <label for="electricidad">Electricidad (KWh):</label> <input type="text" disabled
                                                                        name="electricidad" id="electricidad" value=""/>
                     <!-- placeholder="Text input" -->
                 </div>
@@ -137,21 +132,17 @@
             <div data-role="collapsible">
                 <h4>Alcance 3</h4>
                 <div class="ui-field-contain">
-                    <label for="agua-potable">Agua potable:</label> <input type="text" disabled
+                    <label for="agua-potable">Agua potable (m3):</label> <input type="text" disabled
                                                                        name="agua-potable" id="agua-potable" value=""/>
                     <!-- placeholder="Text input" -->
                 </div>
                 <div class="ui-field-contain">
-                    <label for="consumo-papel">Papel y carton:</label> <input type="text" placeholder="consumo" disabled
+                    <label for="consumo-papel">Consumo papel y carton (Kg):</label> <input type="text" placeholder="consumo" disabled
                                                                        name="consumo-papel" id="consumo-papel" value=""/>
                 </div>
                 <div class="ui-field-contain">
-                    <label for="residuos-papel">Papel y carton:</label> <input type="text" placeholder="residuos" disabled
+                    <label for="residuos-papel">Residuos papel y carton (Kg):</label> <input type="text" placeholder="residuos" disabled
                                                                               name="residuos-papel" id="residuos-papel" value=""/>
-                </div>
-                <div class="ui-field-contain">
-                    <label for="factor">Factor:</label> <input type="text" disabled
-                                                                               name="factor" id="factor" value=""/>
                 </div>
             </div>
         </form>
